# dozentenfeedback

./: .env.example  .gitignore  PRODUCTION_SETUP.md  README.md  ZAPIER_CONFIG.md  ZAPIER_FIX.md  ZAPIER_INTEGRATION.md  ZAPIER_SETUP.md  ZAPIER_SETUP_GUIDE.md  ZAPIER_TIMEOUT_SOLUTION.md  docs.md  github_webhook_trigger.py  process_zoom_video.py  pyproject.toml  requirements.txt  setup_github_repo.sh  test-webhook.py  test-zoom-webhook.py  test_github_webhook.py  test_pdf_generation.py  vercel.json
.github/workflows/: process-video.yml
api/tasks/: process-video.py
api/webhook/: assemblyai-callback.py  check-status.py  process-async.py  process-simple.py  process-split.py  process.py  start-processing.py  status.py  submit-to-assemblyai.py
src/app/: __init__.py  aggregator.py  analyzer.py  chunker.py  config.py  formatter.py  google_drive_storage.py  main.py  models.py  pdf_formatter.py  pdf_formatter_improved.py  transcription.py  transcription_url.py  vtt_parser.py
